# cync

./: .gitignore  README.md  pyproject.toml  requirements.txt  tmux_exampl.sh
cync/: __main__.py  handler.py
