[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cync"
authors = [
    {name = "Norton Pengra", email = "npengra@nvidia.com"},
]
description = "A less permission fussy SSHFS via SCPing."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "paramiko==3.3.1",
    "watchdog==3.0.0",
    "scp==0.14.5",
    "click==8.1.7",
    "textual==0.42.0",
]
version = "0.0.1"


[tool.setuptools.packages.find]
include = ["cync"]

[project.scripts]
cync = "cync.__main__:cync"
